--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "typescript": "~5.5.3"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.148.0",
-    "constructs": "^10.0.0",
+    "@aws-sdk/client-dynamodb": "^3.614.0",
+    "@aws-sdk/util-dynamodb": "^3.614.0",
+    "aws-cdk-lib": "^2.148.0",
+    "constructs": "^10.3.0",
     "source-map-support": "^0.5.21"
   }
 }
